# Calculator_logical_expressions

./: README.md  db.sqlite3  pyproject.toml
djangoProject/: settings.py  urls.py  views.py
templates/: main.html
